--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
-*{
+* {
   font-family: 'Libre Baskerville', serif;
 }
 
 html {
-  height: 100%;
+  height: 100vh;
   margin: 0;
   width: 100%
 }
@@ -16,7 +16,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100%;
-
+  height: 100%;
 }
 
 h1, h2, a {
